--- a/manifest.json
+++ b/manifest.json
@@ -1,25 +1,40 @@
 {
-    "manifest_version": 3,
-    "name": "Dark Pattern Detector",
-    "version": "1.0",
-    "description": "Detects pre-selected checkboxes",
-    "permissions": [
-        "activeTab",
-        "scripting",
-        "storage"
-    ],
-    "host_permissions": ["<all_urls>"],
-    "action": {
-        "default_popup": "popup.html",
-        "default_width": 600
-    },
-    "background": {
-        "service_worker": "background.js"
-    },
-    "content_scripts": [
+  "manifest_version": 3,
+  "name": "Dark Pattern Detector",
+  "version": "1.0",
+  "description": "Detects pre - selected checkboxes",
+  "permissions": [
+      "activeTab",
+      "scripting",
+      "storage",
+      "tabs"
+  ],
+  "host_permissions": ["<all_urls>"],
+  "action": {
+      "default_popup": "popup.html",
+      "default_width": 600
+  },
+  "background": {
+      "service_worker": "background.js"
+  },
+  "content_scripts": [
       {
-        "matches": ["<all_urls>"],
-        "js": ["scripts/content.js"]
+          "matches": ["<all_urls>"],
+          "js": [
+              "node_modules/onnxruntime-web/dist/ort.min.js",
+              "scripts/confirmshaming.js",
+              "scripts/content.js"
+          ]
       }
-    ]
-  }
+  ],
+  "web_accessible_resources": [
+      {
+          "resources": [
+              "scripts/confirmshaming.js",
+              "node_modules/onnxruntime-web/dist/*",
+              "utils/distilbert_onnx/*"
+          ],
+          "matches": ["<all_urls>"]
+      }
+  ]
+}
